[project]
name = "pysam"
description = "pysam - a python module for reading, manipulating and writing genomic data sets."
license = { text = "MIT License" }
version = "0.21.0"
authors = [
 { name = "Andreas Heger", email = "andreas.heger@gmail.com"}
]
requires-python = ">=3.6"

dynamic = [
    "classifiers",
    "readme",
]

[build-system]
requires = ["setuptools>=59.0", "wheel", "Cython>=0.29.12"]
build-backend = "setuptools.build_meta:__legacy__"
