[project]
name = "pysam"
description = "pysam - a python module for reading, manipulating and writing genomic data sets."
license = { text = "MIT License" }
version = "0.21.0"
authors = [
 { name = "Andreas Heger", email = "andreas.heger@gmail.com"}
]
requires-python = ">=3.6"

dynamic = [
    "classifiers",
    "readme",
]

[build-system]
requires = ["setuptools>=61.0", "Cython>=0.29.12"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py36, py311

    [testenv]
    deps = pytest
    setenv = REF_PATH=:
    commands = pytest tests
"""
