[project]
name = "pysam"
description = "Package for reading, manipulating, and writing genomic data"
license = { text = "MIT License" }
authors = [
 { name = "Andreas Heger", email = "andreas.heger@gmail.com"}
]
requires-python = ">=3.6"

dynamic = [
    "classifiers",
    "readme",
    "version",
]

[project.urls]
"Documentation" = "https://pysam.readthedocs.io/"
"Release notes" = "https://pysam.readthedocs.io/en/stable/release.html"

[build-system]
requires = ["setuptools>=59.0", "Cython>=0.29.12,<4"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.cibuildwheel]
before-all = "{project}/devtools/install-prerequisites.sh"
# Necessary until we build libhts.a out-of-tree from within build_temp
before-build = "make -C {project}/htslib distclean"

test-requires = ["pytest"]
test-command = "REF_PATH=: pytest {project}/tests"

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py36, py311

    [testenv]
    deps = pytest
    setenv = REF_PATH=:
    commands = pytest tests
"""
